# SPDX-FileCopyrightText: Copyright (c) 2017-2023 slowtec GmbH <post@slowtec.de>
# SPDX-License-Identifier: MIT OR Apache-2.0

[package]
authors = [
  "slowtec GmbH <post@slowtec.de>",
  "Markus Kohlhase <markus.kohlhase@slowtec.de>",
]
description = "Tokio-based Modbus library"
edition = "2021"
homepage = "https://github.com/slowtec/tokio-modbus"
include = ["/src", "/CHANGELOG.md", "/README.md", "/LICENSES"]
keywords = ["fieldbus", "modbus", "hardware", "automation"]
license = "MIT OR Apache-2.0"
name = "tokio-modbus"
readme = "README.md"
repository = "https://github.com/slowtec/tokio-modbus"
rust-version = "1.65"
version = "0.8.1"

[package.metadata.docs.rs]
all-features = true

# Please specify precise dependency versions in Cargo.toml:
# <https://users.rust-lang.org/t/psa-please-specify-precise-dependency-versions-in-cargo-toml/71277>

[dependencies]
async-trait = {version = "0.1", default-features = false}
byteorder = {version = "1", default-features = false, features = ["std"]}
bytes = {version = "1", default-features = false}
futures = {version = "0.3", default-features = false, optional = true}
futures-util = {version = "0.3", default-features = false, optional = true}
log = {version = "0.4", default-features = false}
smallvec = {version = "1.10.0", default-features = false}
socket2 = {version = "0.6.2", default-features = false, optional = true}
tokio = {version = "1", default-features = false}
# Disable default-features to exclude unused dependency on libudev
tokio-serial = {version = "5.4.4", default-features = false, optional = true}
tokio-util = {version = "0.7.7", default-features = false, features = [
  "codec",
]}

[dev-dependencies]
anyhow = "1.0.70"
env_logger = "0.10.0"
futures = "0.3.28"
pem = "2.0.1"
pkcs8 = {version = "0.10.2", features = ["encryption", "pem", "std"]}
rustls-pemfile = "1.0.2"
tokio = {version = "1.27.0", default-features = false, features = [
  "macros",
  "rt-multi-thread",
  "time",
]}
tokio-rustls = "0.24.0"
tokio-serial = {version = "5.4.4", default-features = false}
webpki = "0.22.0"

[features]
default = ["rtu", "tcp", "rtu-server", "tcp-server"]
rtu = ["futures-util/sink"]
rtu-server = ["rtu", "server", "tokio/macros", "dep:tokio-serial"]
rtu-sync = ["rtu", "sync", "dep:tokio-serial"]
tcp = ["tokio/net", "futures-util/sink"]
tcp-server = [
  "tcp",
  "server",
  "socket2/all",
  "tokio/macros",
  "tokio/rt-multi-thread",
]
tcp-sync = ["tcp", "sync"]
# The following features are internal and must not be used in dependencies.
server = ["dep:futures"]
sync = ["dep:futures", "tokio/time", "tokio/rt"]

[badges]
maintenance = {status = "actively-developed"}

[[example]]
name = "rtu-client-sync"
path = "examples/rtu-client-sync.rs"
required-features = ["rtu-sync"]

[[example]]
name = "rtu-client"
path = "examples/rtu-client.rs"
required-features = ["rtu"]

[[example]]
name = "rtu-server"
path = "examples/rtu-server.rs"
required-features = ["rtu-server"]

[[example]]
name = "rtu-server-address"
path = "examples/rtu-server-address.rs"
required-features = ["rtu-server"]

[[example]]
name = "tcp-client-custom-fn"
path = "examples/tcp-client-custom-fn.rs"
required-features = ["tcp"]

[[example]]
name = "tcp-client-sync"
path = "examples/tcp-client-sync.rs"
required-features = ["tcp-sync"]

[[example]]
name = "tcp-client"
path = "examples/tcp-client.rs"
required-features = ["tcp"]

[[example]]
name = "tcp-server"
path = "examples/tcp-server.rs"
required-features = ["tcp-server"]

[[example]]
name = "tls-client"
path = "examples/tls-client.rs"
required-features = ["tcp"]

[[example]]
name = "tls-server"
path = "examples/tls-server.rs"
required-features = ["tcp-server"]
